--- a/sass/partials/_hero-section.scss
+++ b/sass/partials/_hero-section.scss
@@ -1,12 +1,12 @@
 .hero-section {
-    // width: 1280px;
-    // height: 720px;
-    padding: 70px 15px 20px;
+    width: 414px;
+    padding: 181px 0 20px;
     width: 100%;
 }
 .hero__title {
         // display: flex;
         padding-bottom: 24px;
+        width: 303px;
         // justify-content: center;
         font-family: 'Film P3';
         font-style: normal;
@@ -15,16 +15,16 @@
         line-height: 1.07;
         letter-spacing: 0.3em;
         color: #FFFFFF;
-        @media screen and(min-width:1024px) {
-        padding-top: 88px;
-        padding-bottom: 16px;
-        font-size: 128px;
-        line-height: 1.08;
-        }
-        @media screen and(min-width:1280px) {
-        padding-top: 64px;
-        padding-bottom: 32px;
-}
+//         @media screen and(min-width:1024px) {
+//         padding-top: 88px;
+//         padding-bottom: 16px;
+//         font-size: 128px;
+//         line-height: 1.08;
+//         }
+//         @media screen and(min-width:1280px) {
+//         padding-top: 64px;
+//         padding-bottom: 32px;
+// }
 }
 .hero__subtitle {
         // display: flex;
@@ -33,8 +33,8 @@
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 600;
-        font-size: 20px;
-        line-height: 1.2;
+        font-size: 16px;
+        line-height: 1.22;
         letter-spacing: 0.02em;
         color: #FFFFFF;
 }
@@ -51,52 +51,48 @@
         color: #FFFFFF;
 }
 .site-address {
-    display: none;
-    @media screen and(min-width:1024px) {
-    display: flex;
-        }
+    margin-right: 0;
+    margin-left: auto;
+    margin-bottom: 70px;
+    // @media screen and(min-width:1024px) {
+    // display: flex;
+    //     }
         // @media screen and(min-width:1280px) {
     
         // }
 }
-.order-table {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
-    color: #F3C653;
-    width: 232px;
-    height: 48px;
-    background: rgba(0, 0, 0, 0.4);
-    border: 2px solid #FFFFFF;
-    border-radius: 25px;
-}
-.order-room {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
-    color: #F3C653;
-    width: 232px;
-    height: 48px;
-    background: rgba(0, 0, 0, 0.4);
-    border: 2px solid #FFFFFF;
-    border-radius: 25px;
-}
 .table__button {
-    // display: flex;
-    // justify-content: center;
-    @media screen and(min-width:1280px) {
-        display: flex;
-        justify-content: flex-end;
+    margin-bottom: 24px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: #F3C653;
+    width: 232px;
+    height: 48px;
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid #FFFFFF;
+    border-radius: 25px;
+    cursor: pointer;
 }
+.room__button {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: #F3C653;
+    width: 232px;
+    height: 48px;
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid #FFFFFF;
+    border-radius: 25px;
 }
+
 .site-net__list {
-    display: block;
     width: 112px;
     height: 24px;
     list-style: none;
