--- a/sass/partials/_site-address.scss
+++ b/sass/partials/_site-address.scss
@@ -7,9 +7,9 @@
         border-radius: 2px;
         
 
-        @media screen and(min-width:1024px) {
-            display: none;
-        }
+        // @media screen and(min-width:1024px) {
+        //     display: none;
+        // }
     }
 
     .site-address__text {
