--- a/sass/partials/_modal-table.scss
+++ b/sass/partials/_modal-table.scss
@@ -5,9 +5,9 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity var(--transition-timing-function),
-    visibility var(--transition-timing-function);
+    background-color: #605B5B;
+    transition: opacity var(--transition-timing-function);
+    visibility: var(--transition-timing-function);
 }
 
 .is-hidden {
@@ -20,7 +20,7 @@
     transform: translate(-50%, -50%);
 }
 
-.modal {
+.modal-table {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -39,9 +39,9 @@
     // }
 }
 
-// .button-close {
-//     position: absolute;
-//     display: flex;
+.button-close {
+    position: absolute;
+    display: flex;
 //     justify-content: center;
 //     align-items: center;
 //     right: 8px;
@@ -55,7 +55,7 @@
 //     color: #000000;
 //     cursor: pointer;
 //     transition: color var(--transition-timing-function);
-// }
+}
 
 // .button-close:focus,
 // .button-close:hover {
@@ -70,7 +70,6 @@
 
 .order-table {
     position: relative;
-    margin: 0 auto;
 }
 
 .order-table__title {
@@ -105,7 +104,7 @@
     }
 }
 
-.order-form__input {
+.order-table__input {
     width: 100%;
     height: 54px;
     border: 1px solid #C79002;
