--- a/sass/partials/_page-header.scss
+++ b/sass/partials/_page-header.scss
@@ -1,21 +1,25 @@
 .page-header {
-        height: 111px;
         width: 100%;
         width: 414px;
-        height: 100%;
+        position: fixed;
+        z-index: 1;
 }
 .site-nav {
-        display: inline-block;
-        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        // justify-content: baseline;
+        min-width: 414px;
+        width: 100%;
+        height: 111px;
         // display: flex;
         // flex-direction: row;
         // justify-content: space-between;
         // align-content: center;
-        height: 100px;
         // display: inline-block;
 }
 .site-nav__logo {
-        display: inline-block;
         padding-top: 16px;
         margin-right: 52px;
         width: 114px;
@@ -30,23 +34,19 @@
 // }
 
 .site-nav__list {
-        display: inline-block;
-        margin: 0 auto;
-        // display: flex;
-        // flex-direction: row;
-        // gap: 72px;
         list-style: none;
+        display: flex;
+        flex-direction: row;
+        // gap: 72px;
         // padding: 30px 0;
 }
+
 .site-nav__page {
-        display: inline-block;
-        margin: 0 auto;
-        // display: flex;
-        // flex-direction: row;
         padding-top: 28px;
+        display: flex;
+        flex-direction: row;
 }
 .site-nav__link {
-        display: inline-block;
         margin-right: 6px;
         // align-items: center;
         font-family: 'Montserrat';
@@ -82,8 +82,6 @@
 }
 
 .site-nav__contact {
-        display: inline-block;
-        margin: 0 auto;
         border: 0;
         @media screen and(min-width:1024px) {
         display: flex;
@@ -137,14 +135,12 @@
         fill: #F3C653;
 }
 
-.site-address {
-        display: inline-block;
-        margin: 0 auto;
-        margin-top: 12px;
-//         @media screen and(min-width:1024px) {
-//                 display: none;
+// .site-address {
+//         margin-top: 12px;
+// //         @media screen and(min-width:1024px) {
+// //                 display: none;
+// // }
 // }
-}
 
 
 
