--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -4,17 +4,17 @@
     box-sizing: border-box;
 }
 
-// :root {
-//     --primary-text-color: #212121;
-//     --background-color: #F5F5F5;
-//     --aditional-color: #ffffff;
-//     --accent-text-color: #757575;
-//     --button-active-color: #2196F3;
-//     --transition-timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     --bp-mobail: 480px;
-//     --bp-tablet: 768px;
+:root {
+     --primary-text-color: #212121;
+     --background-color: #F5F5F5;
+    --aditional-color: #ffffff;
+     --accent-text-color: #757575;
+     --button-active-color: #2196F3;
+     --transition-timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // --bp-mobail: 480px;
+    // --bp-tablet: 768px;
 //     --bp-desktop: 1200px;
-// }
+}
 
 // body {
 //     font-family: “Roboto”, sans-serif;
@@ -56,16 +56,16 @@ ul {
         width: 414px;
         margin: 0 auto;
     }
-    @media screen and(min-width:1024px) {
-            width: 1024px;
-            padding-left: 47px;
-            padding-right: 47px;
-            }
+    // @media screen and(min-width:1024px) {
+    //         width: 1024px;
+    //         padding-left: 47px;
+    //         padding-right: 47px;
+    //         }
     
-    @media screen and(min-width:1280px) {
-            width: 1280px;
-            padding-left: 85px;
-            padding-right: 85px;
+    // @media screen and(min-width:1280px) {
+    //         width: 1280px;
+    //         padding-left: 85px;
+    //         padding-right: 85px;
         
-        }
+    //     }
 }
