--- a/css/main.css
+++ b/css/main.css
@@ -604,9 +604,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: #605B5B;
-  -webkit-transition: opacity var(--transition-timing-function);
-  transition: opacity var(--transition-timing-function);
-  visibility: var(--transition-timing-function);
+  -webkit-transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
+  transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
 }
 
 .is-hidden {
@@ -615,12 +614,12 @@ body {
   pointer-events: none;
 }
 
-.backdrop .is-hidden .modal-table {
+.backdrop .is-hidden .modal {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
 
-.modal-table {
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
