--- a/sass/partials/_modal-table.scss
+++ b/sass/partials/_modal-table.scss
@@ -6,8 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: #605B5B;
-    transition: opacity var(--transition-timing-function);
-    visibility: var(--transition-timing-function);
+    transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
 }
 
 .is-hidden {
@@ -16,11 +15,11 @@
     pointer-events: none;
 }
 
-.backdrop .is-hidden .modal-table {
+.backdrop .is-hidden .modal {
     transform: translate(-50%, -50%);
 }
 
-.modal-table {
+.modal {
     position: absolute;
     top: 50%;
     left: 50%;
