--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,4 @@
 @import "./partials/hero-section";
 @import "./partials/site-address";
 @import "./partials/logo";
-@import "./partials/modal-table";
+@import "./partials/modal";
