--- a/sass/partials/_hero-section.scss
+++ b/sass/partials/_hero-section.scss
@@ -2,6 +2,7 @@
     width: 414px;
     padding: 181px 0 20px;
     width: 100%;
+    background-color: rgba(37, 29, 2, 0.788);
 }
 .hero__title {
         // display: flex;
