--- a/sass/partials/_page-header.scss
+++ b/sass/partials/_page-header.scss
@@ -3,6 +3,7 @@
         width: 414px;
         position: fixed;
         z-index: 1;
+        // background-color: rgba(37, 29, 2, 0.788);
 }
 .site-nav {
         display: flex;
@@ -111,8 +112,4 @@
         display: none;
 }
 
-
-body {
-        background-color: rgba(37, 29, 2, 0.788);
-}
 
