--- a/css/main.css
+++ b/css/main.css
@@ -433,14 +433,11 @@ ul {
   display: none;
 }
 
-body {
-  background-color: rgba(37, 29, 2, 0.788);
-}
-
 .hero-section {
   width: 414px;
   padding: 181px 0 20px;
   width: 100%;
+  background-color: rgba(37, 29, 2, 0.788);
 }
 
 .hero__title {
@@ -675,4 +672,57 @@ body {
   width: 22px;
   height: 20px;
   fill: #F3C653;
+}
+
+.restaurant__title {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  margin: -1px;
+}
+
+.restaurant__subtitle {
+  font-family: "Times New Roman";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #B4B4B4;
+}
+
+.restaurant__logo {
+  font-family: "Film P3";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.075;
+  letter-spacing: 0.3em;
+  color: #494848;
+}
+
+.restaurant__text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #5F5F5F;
+}
+
+.restaurant__text2 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #C79002;
 }/*# sourceMappingURL=main.css.map */
