--- a/css/main.css
+++ b/css/main.css
@@ -725,4 +725,18 @@ ul {
   line-height: 1.25;
   letter-spacing: 0.02em;
   color: #C79002;
+}
+
+.slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  min-width: 0;
+}
+
+.slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }/*# sourceMappingURL=main.css.map */
