--- a/sass/partials/_slider.scss
+++ b/sass/partials/_slider.scss
@@ -1,11 +1,7 @@
 .slider {
-//     display: flex;
-//     overflow: hidden;
         min-width: 0;
+        position: relative;
 }
-// .slider__item {
-//     display: flex;
-// }
 /* Слайдер */
 .slick-slider {}
 
@@ -62,3 +58,21 @@
 
 /* Элемент точки */
 .slick-dots li button {}
+
+.slider .slick-arrow {
+position: absolute;
+// top: 50%;
+z-index: 10;
+font-size: 0;
+width: 32px;
+height: 32px;
+}
+.slider .slick-arrow.slick-prev {
+    left: 0;
+    background: url(/images/cil_arrow-left.svg) 0 0 / 100% no-repeat;
+}
+.slider .slick-arrow.slick-next {
+    right: 15px;
+    bottom: -50px;
+    background: url(/images/icons.svg#icon-arrow-right) 0 0 / 100% no-repeat;
+}
