--- a/sass/partials/_slider.scss
+++ b/sass/partials/_slider.scss
@@ -3,7 +3,7 @@
         // width: 245px;
         // height: 245px;
         position: relative;
-        margin: 32px 0 0 84px;
+        padding: 32px 0 0 84px;
         
         
 }
