--- a/css/main.css
+++ b/css/main.css
@@ -318,10 +318,10 @@ ul {
 }
 
 .page-header {
-  width: 100%;
-  width: 414px;
-  position: fixed;
-  z-index: 1;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .site-nav {
