--- a/sass/partials/_page-header.scss
+++ b/sass/partials/_page-header.scss
@@ -1,8 +1,10 @@
 .page-header {
-        width: 100%;
-        width: 414px;
-        position: fixed;
-        z-index: 1;
+        width: 100vw;
+        // width: 414px;
+        position: absolute;
+        top: 0;
+        left:0;
+        // z-index: 1;
         // background-color: rgba(37, 29, 2, 0.788);
 }
 .site-nav {
