--- a/sass/partials/_slider.scss
+++ b/sass/partials/_slider.scss
@@ -61,10 +61,14 @@
 .slick-slide.slick-cloned {}
 
 /* Стрелка */
-.slick-arrow {}
+.slick-arrow {
+    
+}
 
 /* Стрелка влево */
-.slick-arrow.slick-prev {}
+.slick-arrow.slick-prev {
+
+}
 
 /* Стрелка вправо */
 .slick-arrow.slick-next {}
