--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -319,34 +318,40 @@ ul {
 
 .page-header {
   width: 100vw;
+  width: 414px;
+  height: 64px;
   position: absolute;
   top: 0;
   left: 0;
+  background-color: rgba(26, 20, 3, 0.788);
 }
 
 .site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  min-width: 414px;
-  width: 100%;
-  height: 111px;
 }
 
 .site-nav__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding-top: 16px;
   margin-right: 52px;
-  width: 114px;
+  font-family: "Film P3";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 0.92;
+  letter-spacing: 0.3em;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+@media screen and (min-width: 1024px) {
+  .site-nav__logo {
+    font-size: 40px;
+    line-height: 1.08;
+  }
 }
 
 .site-nav__list {
@@ -354,10 +359,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  gap: 20px;
 }
 
 .site-nav__page {
@@ -365,19 +367,14 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
 }
 
 .site-nav__link {
-  margin-right: 6px;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-size: 16px;
+  line-height: 1.22;
   letter-spacing: 0.02em;
   color: #F3C653;
   text-decoration: none;
@@ -406,6 +403,8 @@ ul {
 }
 
 .site-nav__contact {
+  width: 24px;
+  height: 24px;
   border: 0;
 }
 @media screen and (min-width: 1024px) {
@@ -434,219 +433,6 @@ ul {
   display: none;
 }
 
-.hero-section {
-  width: 414px;
-  padding: 181px 0 20px;
-  width: 100%;
-  background-color: rgba(37, 29, 2, 0.788);
-}
-
-.hero__title {
-  padding-bottom: 24px;
-  width: 303px;
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 96px;
-  line-height: 1.07;
-  letter-spacing: 0.3em;
-  color: #FFFFFF;
-}
-
-.hero__subtitle {
-  padding-bottom: 40px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #FFFFFF;
-}
-
-.hero__slogan {
-  padding-bottom: 113px;
-  font-family: "Times New Roman";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 1.15;
-  letter-spacing: 0.05em;
-  color: #FFFFFF;
-}
-
-.site-address {
-  margin-right: 0;
-  margin-left: auto;
-  margin-bottom: 70px;
-}
-
-.table__button {
-  margin-bottom: 24px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #F3C653;
-  width: 232px;
-  height: 48px;
-  background: rgba(0, 0, 0, 0.4);
-  border: 2px solid #FFFFFF;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
-.room__button {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #F3C653;
-  width: 232px;
-  height: 48px;
-  background: rgba(0, 0, 0, 0.4);
-  border: 2px solid #FFFFFF;
-  border-radius: 25px;
-}
-
-.site-net {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-address {
-  display: block;
-  width: 210px;
-  height: 47px;
-  border: 1px solid rgba(243, 198, 83, 0.7);
-  border-radius: 2px;
-}
-
-.site-address__text {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.25;
-  letter-spacing: 0.01em;
-  color: #E5E5E5;
-  text-decoration: none;
-}
-
-.site-address__icon {
-  fill: #F3C653;
-  min-width: 20px;
-  min-height: 20px;
-  margin-right: 8px;
-}
-
-.logo {
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 0.92;
-  letter-spacing: 0.3em;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-@media screen and (min-width: 1024px) {
-  .logo {
-    font-size: 40px;
-    line-height: 1.08;
-  }
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  background-color: #605B5B;
-  -webkit-transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
-  transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
-}
-
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.backdrop .is-hidden .modal {
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 712px;
-  height: 522px;
-  padding: 60px 15px;
-  border-radius: 2px;
-  background-color: #FFFDEE;
-  -webkit-transition: -webkit-transform var(--transition-timing-function);
-  transition: -webkit-transform var(--transition-timing-function);
-  transition: transform var(--transition-timing-function);
-  transition: transform var(--transition-timing-function), -webkit-transform var(--transition-timing-function);
-}
-
-.button-close {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-/* form */
-.order-table {
-  position: relative;
-}
-
-.order-table__title {
-  margin-bottom: 40px;
-  font-family: "Times New Roman";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
-  color: #000000;
-}
-
-.order-table__label {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.21;
-  letter-spacing: 0.02em;
-  color: #C79002;
-}
-.order-table__label:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.order-table__input {
-  width: 100%;
-  height: 54px;
-  border: 1px solid #C79002;
-  border-radius: 2px;
-  padding: 17px 12px;
-  margin-bottom: 8px;
-}
-
 .site-net {
   height: 24px;
   width: 112px;
@@ -673,125 +459,4 @@ ul {
   width: 22px;
   height: 20px;
   fill: #F3C653;
-}
-
-.restaurant__title {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0);
-  -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
-  margin: -1px;
-}
-
-.restaurant__subtitle {
-  font-family: "Times New Roman";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 1.15;
-  color: #B4B4B4;
-}
-
-.restaurant__logo {
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 1.075;
-  letter-spacing: 0.3em;
-  color: #494848;
-}
-
-.restaurant__text {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #5F5F5F;
-}
-
-.restaurant__text2 {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #C79002;
-}
-
-.slider {
-  min-width: 0;
-  width: 414px;
-  padding: 32px -15px 0 0;
-  margin-right: 0;
-  margin-left: 84px;
-}
-
-.slider__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 270px;
-}
-
-/* Слайдер */
-/* Слайдер запущен */
-/* Слайдер с точками */
-/* Ограничивающая оболочка */
-/* Лента слайдов */
-.slick-track {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 25px;
-  width: 414px;
-}
-
-/* Слайд */
-/* Слайд активный (показывается) */
-/* Слайд основной */
-/* Слайд по центру */
-/* Клонированный слайд */
-/* Стрелка */
-/* Стрелка влево */
-/* Стрелка вправо */
-/* Стрелка не активная */
-/* Точки (булиты) */
-/* Активная точка */
-/* Элемент точки */
-.slider .slick-arrow {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  font-size: 0;
-  width: 32px;
-  height: 32px;
-  border: none;
-}
-
-.slider .slick-arrow.slick-prev {
-  background: url(/images/cil_arrow-left.svg) 0 0/100% no-repeat;
-}
-
-.slider .slick-arrow.slick-next {
-  background: url(/images/cil_arrow-right.svg) 0 0/100% no-repeat;
-}
-
-.slider.slick-initialized.slick-slider {
-  width: 330px;
 }/*# sourceMappingURL=main.css.map */
