--- a/sass/partials/_page-header.scss
+++ b/sass/partials/_page-header.scss
@@ -1,31 +1,40 @@
 .page-header {
         width: 100vw;
-        // width: 414px;
+        width: 414px;
+        height: 64px;
         position: absolute;
         top: 0;
         left:0;
         // z-index: 1;
-        // background-color: rgba(37, 29, 2, 0.788);
+        background-color: rgba(26, 20, 3, 0.788);
 }
 .site-nav {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        // justify-content: baseline;
-        min-width: 414px;
-        width: 100%;
-        height: 111px;
-        // display: flex;
         // flex-direction: row;
+        // align-items: center;
         // justify-content: space-between;
-        // align-content: center;
-        // display: inline-block;
+
 }
 .site-nav__logo {
+        display: flex;
+        // width: 114px;
+        // height: 39px;
         padding-top: 16px;
         margin-right: 52px;
-        width: 114px;
+        font-family: 'Film P3';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 36px;
+                line-height: 0.92;
+                letter-spacing: 0.3em;
+                color: #FFFFFF;
+                text-decoration: none;
+        
+                @media screen and(min-width:1024px) {
+                        font-size: 40px;
+                        line-height: 1.08;
+                }
+        
         // @media screen and(min-width:1024px) {
         // padding: 24px 0 33px;
         // margin-right: 87px;
@@ -39,24 +48,23 @@
 .site-nav__list {
         list-style: none;
         display: flex;
-        flex-direction: row;
-        // gap: 72px;
-        // padding: 30px 0;
+        gap: 20px;
 }
 
 .site-nav__page {
+        
         padding-top: 28px;
         display: flex;
-        flex-direction: row;
+        // flex-direction: row;
 }
 .site-nav__link {
-        margin-right: 6px;
-        // align-items: center;
+        // margin-right: 6px;
+        
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
+        font-size: 16px;
+        line-height: 1.22;
         letter-spacing: 0.02em;
         color: #F3C653;
         text-decoration: none;
@@ -85,6 +93,8 @@
 }
 
 .site-nav__contact {
+        width: 24px;
+        height: 24px;
         border: 0;
         @media screen and(min-width:1024px) {
         display: flex;
@@ -99,6 +109,7 @@
         fill: #F3C653;
         width: 24px;
         height: 24px;
+        // padding: 2px 6px;
 }
 // @media screen and(min-width:414px) {
         
