--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "./base/normalize";
 @import "./utils/vars";
 @import "./partials/page-header";
-// @import "./partials/hero-section";
+@import "./partials/hero-section";
 // @import "./partials/site-address";
 // @import "./partials/logo";
 // @import "./partials/modal";
