--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,6 @@
 // @import "./partials/logo";
 // @import "./partials/modal";
 @import "./partials/site-net";
+@import "./partials/swiper";
 // @import "./partials/restaurant";
 // @import "./partials/slider";
