--- a/css/main.css
+++ b/css/main.css
@@ -315,388 +315,24 @@ ul {
     margin: 0 auto;
   }
 }
-
-.page-header {
-  width: 100vw;
-  height: 64px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.site-nav__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 16px;
-  margin-right: 52px;
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 0.92;
-  letter-spacing: 0.3em;
-  color: #FFFFFF;
-  text-decoration: none;
-}
 @media screen and (min-width: 1024px) {
-  .site-nav__logo {
-    font-size: 40px;
-    line-height: 1.08;
+  .container {
+    width: 1024px;
+    padding-left: 47px;
+    padding-right: 47px;
   }
 }
-
-.site-nav__list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-}
-
-.site-nav__page {
-  padding-top: 28px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-nav__link {
-  margin-right: 6px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #F3C653;
-  text-decoration: none;
-}
-
-.site-nav__phone {
-  display: none;
-}
-@media screen and (min-width: 1024px) {
-  .site-nav__phone {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.21;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-    text-decoration: none;
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+    padding-left: 85px;
+    padding-right: 85px;
   }
-}
-
-.site-nav__contact {
-  border: 0;
-}
-@media screen and (min-width: 1024px) {
-  .site-nav__contact {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 40px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    gap: 16px;
-    border: 1px solid rgba(243, 198, 83, 0.7);
-    border-radius: 2px;
-  }
-}
-
-.site-nav__icon {
-  fill: #F3C653;
-  width: 12px;
-  height: 20px;
-}
-
-.site-net__link {
-  display: none;
-}
-
-.page-header {
-  width: 100vw;
-  height: 64px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.container {
-  padding: 0 15px;
-}
-
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.site-nav__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 16px;
-  margin-right: 52px;
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 0.92;
-  letter-spacing: 0.3em;
-  color: var(--primary-white-color);
-  text-decoration: none;
-}
-@media screen and (min-width: 1024px) {
-  .site-nav__logo {
-    font-size: 40px;
-    line-height: 1.08;
-  }
-}
-
-.site-nav__list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-}
-
-.site-nav__page {
-  padding-top: 28px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-nav__link {
-  margin-right: 6px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: var(--accent-yellow-color);
-  text-decoration: none;
-}
-
-.site-nav__phone {
-  display: none;
-}
-@media screen and (min-width: 1024px) {
-  .site-nav__phone {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.21;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    letter-spacing: 0.02em;
-    color: var(--primary-white-color);
-    text-decoration: none;
-  }
-}
-
-.site-nav__contact {
-  border: 0;
-}
-@media screen and (min-width: 1024px) {
-  .site-nav__contact {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 40px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    gap: 16px;
-    border: 1px solid rgba(243, 198, 83, 0.7);
-    border-radius: 2px;
-  }
-}
-
-.site-nav__icon {
-  fill: var(--accent-yellow-color);
-  width: 12px;
-  height: 20px;
-}
-
-.site-net__link {
-  display: none;
-}
-
-.hero-section {
-  padding: 181px 0 20px;
-  width: 100vw;
-  background-color: rgba(36, 25, 2, 0.952);
-}
-
-.hero__title {
-  padding-bottom: 24px;
-  width: 303px;
-  font-family: "Film P3";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 96px;
-  line-height: 1.07;
-  letter-spacing: 0.3em;
-  color: #FFFFFF;
-}
-
-.hero__subtitle {
-  padding-bottom: 40px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #FFFFFF;
-}
-
-.hero__slogan {
-  padding-bottom: 113px;
-  font-family: "Times New Roman";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 1.15;
-  letter-spacing: 0.05em;
-  color: #FFFFFF;
-}
-
-.site-address {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 0;
-  margin-right: 0;
-  margin-left: auto;
-  margin-bottom: 70px;
-}
-@media screen and (min-width: 1024px) {
-  .site-address {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-.table__button {
-  margin-bottom: 24px;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #F3C653;
-  width: 232px;
-  height: 48px;
-  background: rgba(0, 0, 0, 0.4);
-  border: 2px solid #FFFFFF;
-  border-radius: 25px;
-  cursor: pointer;
-}
-
-.room__button {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.02em;
-  color: #F3C653;
-  width: 232px;
-  height: 48px;
-  background: rgba(0, 0, 0, 0.4);
-  border: 2px solid #FFFFFF;
-  border-radius: 25px;
-}
-
-.site-net {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-net {
-  height: 24px;
-  width: 112px;
-}
-
-.site-net__list {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 20px;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  width: 24px;
-  height: 24px;
-  background-color: transparent;
-  border: none;
-}
-
-.site-net__icon {
-  width: 22px;
-  height: 20px;
-  fill: #F3C653;
 }
 
 .image-slider {
   min-width: 0;
-  width: 414px;
-  padding: 32px -15px 0 0;
-  margin-right: 0;
-  margin-left: 84px;
-}
-
-.image-slider__slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 270px;
-}
-
-.image-slider__button-prev {
-  background: url(/images/cil_arrow-left.svg) 0 0/100% no-repeat;
-}
-
-.image-slider-button-next {
-  background: url(/images/cil_arrow-right.svg) 0 0/100% no-repeat;
+  background-color: rgb(131, 238, 10);
 }
 
 .image-slider__image {
