--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,11 @@
 @import "./base/normalize";
 @import "./utils/vars";
-@import "./partials/page-header";
-@import "./partials/hero-section";
+// @import "./partials/page-header";
+// @import "./partials/hero-section";
 // @import "./partials/site-address";
 // @import "./partials/logo";
 // @import "./partials/modal";
-@import "./partials/site-net";
+// @import "./partials/site-net";
 @import "./partials/swiper";
 // @import "./partials/restaurant";
 // @import "./partials/slider";
