--- a/sass/partials/_swiper.scss
+++ b/sass/partials/_swiper.scss
@@ -1,27 +1,28 @@
 .image-slider {
         min-width: 0;
-        width: 414px;
-        padding: 32px -15px 0 0;
-        margin-right: 0;
-        margin-left: 84px;
+        background-color: rgb(131, 238, 10);
+        // width: 414px;
+        // padding: 32px -15px 0 0;
+        // margin-right: 0;
+        // margin-left: 84px;
         
         
 }
 .image-slider__slide {
-    display: flex;
-    width: 270px;
+    // display: flex;
+    // width: 270px;
     
 }
-.image-slider__button-prev {
-    // right: 79px;
-    // padding: 0;
-    background: url(/images/cil_arrow-left.svg) 0 0 / 100% no-repeat;
-}
-.image-slider-button-next {
-    // right: 15px;
-    // padding: 0;
-    background: url(/images/cil_arrow-right.svg) 0 0 / 100% no-repeat;
-}
+// .image-slider__button-prev {
+//     // right: 79px;
+//     // padding: 0;
+//     background: url(/images/cil_arrow-left.svg) 0 0 / 100% no-repeat;
+// }
+// .image-slider-button-next {
+//     // right: 15px;
+//     // padding: 0;
+//     background: url(/images/cil_arrow-right.svg) 0 0 / 100% no-repeat;
+// }
 .image-slider__image {
     text-align: center;
     padding: 30px 0 70px 0;
