--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -56,16 +56,16 @@ ul {
         width: 414px;
         margin: 0 auto;
     }
-    // @media screen and(min-width:1024px) {
-    //         width: 1024px;
-    //         padding-left: 47px;
-    //         padding-right: 47px;
-    //         }
+    @media screen and(min-width:1024px) {
+             width: 1024px;
+             padding-left: 47px;
+             padding-right: 47px;
+             }
     
-    // @media screen and(min-width:1280px) {
-    //         width: 1280px;
-    //         padding-left: 85px;
-    //         padding-right: 85px;
+    @media screen and(min-width:1280px) {
+            width: 1280px;
+            padding-left: 85px;
+            padding-right: 85px;
         
-    //     }
+        }
 }
